# pasu-IAM-Analyzer

./: .gitignore  README.md  demo_policy_s3.json  pyproject.toml
.github/workflows/: aws-catalog-sync.yml  ci.yml
app/: analyzer.py  aws_collector.py  cli.py  main.py  models.py
app/data/: aws_catalog.json
app/rules/: fix_profiles.yaml  risky_actions.yaml  scoring.yaml
app/static/: index.html
docs/: PRODUCT_SPEC.md
examples/: github-actions-workflow.yml
reports/: aws_catalog_diff.json  aws_catalog_diff.md
scripts/: debug_agent.py  sync_aws_catalog.py
tests/: test_aws_collector.py  test_iam_analyzer.py  test_prompt_injection_fixes.py
