[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pasu"
version = "0.1.0"
description = "Cloud IAM security guard - analyze AWS IAM policies for risks"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "boto3",
    "fastapi",
    "pydantic",
    "uvicorn",
    "python-multipart",
    "httpx",
]

[project.scripts]
pasu = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
