[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pasu"
version = "0.5.0"
description = "Cloud IAM security guard - analyze AWS IAM policies for risks"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "boto3",
    "fastapi",
    "pydantic",
    "uvicorn",
    "python-multipart",
    "httpx",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["aws", "iam", "security", "cli", "cloud-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema",
]

[project.urls]
Homepage = "https://github.com/nkimcyber/pasu"
Repository = "https://github.com/nkimcyber/pasu"
Issues = "https://github.com/nkimcyber/pasu/issues"

[project.scripts]
pasu = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = [
    "data/*.json",
    "rules/*.yaml",
]
